# cuda-portfolio

./: README.md
cuda-slow-mo/: CMakeLists.txt
cuda-slow-mo/include/: kernels.cuh
cuda-slow-mo/src/: kernels.cu  main.cpp
mcm-risk/: mc_gbm
mcm-risk/src/: code.cu  main.cu  montecarlo.cu  montecarlo.cuh
pixelpro/: CMakeLists.txt
pixelpro/include/: colorspace.cuh  convolution.cuh  gamma_brightness.cuh  grayscale.cuh
pixelpro/src/: colorspace.cu  conv_filters.cu  convolution.cu  gamma_brightness.cu  grayscale.cu  main.cpp
